--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Rick and Morty</title>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
